- Improve HTML output of shortcodes to be compatible with most themes (remove line breaks inside HTML tags)
- Improved third party library by adding a class prefix to avoid class collisions (Stripe, Mailchimp, AuthorizeNet)
- Improve the BuddyPress Add-on to optionally use the M2 registration page
- Improve caching and reduce SQL queries to make the plugin faster
- Remove condition that auto-injected missing M2 shortcodes on Membership pages
- Fix wrong subscription logic that activated Subscriptions without payment in a few cases
- Fix possible memory issue that happened when updating the plugin
- Fix bug that did not activate Subscription when an invoice was paid via Manual Gateway
- Fix the invitation code Add-on (integration in payment form was not working)
- Fix a caching issue that caused problems with Subscriptions when memcache was enabled
- Fix problem in network wide mode that would not display all Users in the Members page
- Fix registration logic to honor domain limitation for signup email addresses
- Fix bug that would not give access to protected content while user is in trial period
- Fix bug that set the wrong expire date for "Finite Access" subscriptions
- Fix wrong rounding-logic in Stripe gateway
- Fix bug that prevented admin to change the recurring payment frequency to anything else than 'Days' in few cases
- Fix a bug in Automated Email Response Settings that did always enable the email when saving changes
- Fix bug that would send some emails even when the 'MS_STOP_EMAILS' flag was active
- Fix plugin logic to allow changing Protection Rules even when Content Protection is disabled
- Fix compatibility issue with WP Recaptcha during user registration
- Fix a minor security hole in the data import module
- Fix a rare 403 error that happened when a user was accessing protected content
- Fix a bunch of PHP notices and warnings
- A lot of small improvements behind the scenes, cleanup and some new filters

1.0.0.8