@@ -106,6 +106,11 @@
 		height: 20px;
 		line-height: 20px;
 		box-shadow: 0 -20px 10px -10px rgba(0, 0, 0, 0.2) inset;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		max-width: 100%;
+		cursor: default;
 	}
 
 	h3 {
